# tuxedo-keyboard-backlight-control

./: CMakeLists.txt  LICENSE  README.md
i18n/: base.ts  de.ts
qml/: ColorComboBox.qml  ColorComboBoxWidget.qml  ColorFrame.qml  ColorListModel.qml  MainWindow.qml  ModeListModel.qml
src/: about.cpp  about.hpp  kbbacklightctrl.cpp  kbbacklightctrl.hpp  main.cpp
